<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/text_view_title"
    style="@style/Text.Title1.Medium"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/product_select_done_title"
    android:textColor="@color/screen_title"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/text_view_subtitle_1"
    style="@style/Text.Body"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_6"
    android:gravity="center"
    android:text="@string/product_select_done_subtitle_1"
    android:textColor="@color/screen_subtitle"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

  <View
    android:id="@+id/divider"
    style="@style/Divider"
    android:layout_width="0dp"
    android:layout_marginTop="@dimen/spacing_6"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_subtitle_1" />

  <TextView
    android:id="@+id/text_view_subtitle_2"
    style="@style/Text.Body"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_6"
    android:gravity="center"
    android:text="@string/product_select_done_subtitle_2"
    android:textColor="@color/screen_subtitle"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/divider" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_done"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/button_height"
    android:layout_marginTop="@dimen/spacing_10"
    android:text="@string/product_select_button_done"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_subtitle_2"
    app:layout_constraintWidth_min="132dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
