<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/text_view_title"
    style="@style/Text.Subhead.Medium"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/home_approved_title"
    android:textColor="@color/black"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_enter_machine"
    style="@style/OutlinedButton"
    android:layout_width="0dp"
    android:layout_height="@dimen/button_height"
    android:layout_marginTop="@dimen/spacing_6"
    android:layout_marginEnd="@dimen/spacing_1"
    android:text="@string/home_approved_button_enter"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/button_scan_machine"
    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_scan_machine"
    android:layout_width="0dp"
    android:layout_height="@dimen/button_height"
    android:layout_marginStart="@dimen/spacing_1"
    android:layout_marginTop="@dimen/spacing_6"
    android:text="@string/home_approved_button_scan"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/button_enter_machine"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
