<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/screen_background"
  android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large">

    <TextView
      android:id="@+id/textViewTitle"
      style="@style/Text.TitleLarge.Medium"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/auth_name_title"
      android:textColor="@color/screen_title"
      app:layout_constraintBottom_toTopOf="@id/textViewSubtitle"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

    <TextView
      android:id="@+id/textViewSubtitle"
      style="@style/Text.Body"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_4"
      android:text="@string/auth_name_subtitle"
      android:textColor="@color/screen_subtitle"
      app:layout_constraintBottom_toTopOf="@id/textInputLayout"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <ru.poprobuy.poprobuy.view.AuthTextInputLayout
      android:id="@+id/textInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_6"
      app:layout_constraintBottom_toTopOf="@id/textViewError"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewSubtitle"
      app:placeholderText="@string/auth_name_placeholder" />

    <TextView
      android:id="@+id/textViewError"
      style="@style/Text.Error"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="@id/textInputLayout"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonContinue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_6"
      android:layout_marginBottom="@dimen/spacing_6"
      android:text="@string/auth_button_continue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewError"
      app:layout_constraintVertical_bias="1" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
