<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/screen_background"
  android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/screen_background"
    android:paddingStart="@dimen/padding_large"
    android:paddingTop="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large">

    <TextView
      android:id="@+id/textViewTitle"
      style="@style/Text.TitleLarge.Medium"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/auth_policy_title"
      android:textColor="@color/screen_title"
      app:layout_constraintBottom_toTopOf="@id/textViewPolicy"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

    <TextView
      android:id="@+id/textViewPolicy"
      style="@style/Text.Body"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_6"
      android:layout_marginBottom="@dimen/spacing_12"
      android:text="@string/auth_policy_text"
      android:textColor="@color/auth_subtitle"
      app:layout_constraintBottom_toTopOf="@id/buttonContinue"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonContinue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_12"
      android:text="@string/auth_policy_button_continue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

