<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/text_view_instructions_title"
    style="@style/Text.Title2.Medium"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/home_empty_instructions_title"
    android:textColor="@color/screen_title"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/image_view_step_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_step_1"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@id/text_view_step_1" />

  <TextView
    android:id="@+id/text_view_step_1"
    style="@style/Text.Subhead"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_3"
    android:layout_marginTop="@dimen/spacing_6"
    android:text="@string/home_empty_instructions_step_1"
    android:textColor="@color/screen_subtitle"
    app:layout_constraintLeft_toRightOf="@id/image_view_step_1"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_instructions_title" />

  <ImageView
    android:id="@+id/image_view_step_2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_step_2"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@id/text_view_step_2" />

  <TextView
    android:id="@+id/text_view_step_2"
    style="@style/Text.Subhead"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_3"
    android:layout_marginTop="@dimen/spacing_4"
    android:text="@string/home_empty_instructions_step_2"
    android:textColor="@color/screen_subtitle"
    app:layout_constraintLeft_toRightOf="@id/image_view_step_2"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_step_1" />

</androidx.constraintlayout.widget.ConstraintLayout>
