<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/layoutConfirmation"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <ImageView
    android:id="@+id/image_view_icon"
    android:layout_width="215dp"
    android:layout_height="215dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:src="@sample/product" />

  <TextView
    android:id="@+id/text_view_title"
    style="@style/Text.Title2.Medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_6"
    android:gravity="center"
    android:text="@string/product_select_title_confirmation"
    android:textColor="@color/screen_title"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/image_view_icon" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_no"
    style="@style/OutlinedButton"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/button_height"
    android:layout_marginTop="@dimen/spacing_10"
    android:layout_marginEnd="6dp"
    android:minWidth="@dimen/product_select_buttons_min_width"
    android:text="@string/common_button_no"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/button_yes"
    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_yes"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/button_height"
    android:layout_marginStart="6dp"
    android:layout_marginTop="@dimen/spacing_10"
    android:minWidth="@dimen/product_select_buttons_min_width"
    android:text="@string/common_button_yes"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/button_no"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

  <ProgressBar
    android:id="@+id/progress_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_10"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
